# diplomacy

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .oxlintrc.json  Dockerfile  MAP_CREATION.md  components.json  drizzle.config.ts  migrate.ts  package.json  posthog-setup-report.md  railway.toml  server.ts  start.sh  tsconfig.json  vite.config.ts
.claude/skills/: new-domain  new-email-template  new-route  new-schema
docs/: 01-project-setup.md  02-tanstack-start-routing.md  03-orpc.md  04-database.md  05-authentication.md  06-authorization.md  07-domain-module-pattern.md  08-multi-tenancy.md  09-email.md  10-forms-and-ui.md  11-mcp-and-ai.md  12-observability-and-audit.md  13-testing-and-deployment.md  README.md
drizzle/: 0000_shallow_blackheart.sql  0001_illegal_butterfly.sql  0002_little_boom_boom.sql  0003_gifted_blazing_skull.sql  0004_quiet_titanium_man.sql  0005_calm_karnak.sql  0006_cultured_pyro.sql  0007_bot_mcp_players.sql  0008_aspiring_sally_floyd.sql  0009_easy_silver_surfer.sql  0010_eager_roulette.sql  0011_lame_james_howlett.sql  0012_brainy_scrambler.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  (+1 more)
public/: service-worker.js
rust/diplomacy-wasm/: Cargo.toml
rust/diplomacy-wasm/src/: lib.rs
rust/diplomacy-wasm/src/standard_map/: borders.csv
src/: not-found.tsx  routeTree.gen.ts  router.tsx  start.ts
(+174 files in other folders)
